--- a/app/views/home/search.erb
+++ b/app/views/home/search.erb
@@ -15,3 +15,9 @@
     <input type="text" name="q">
     <input type="submit">
 </form>
+
+<h1>구글검색</h1>
+<form action="https://www.google.co.kr/search">
+    <input type="text" name="q">
+    <input type="submit">
+</form>
